# hiai_ddk

./: .gitignore  CMakeLists.txt  README.md  RELEASE.md  Third_Party_Open_Source_Software_Notice.doc  build.conf  build.py  build.sh  copy_files.py  ddk.xml  get_all_files.py  open_source_file_list.txt
api/framework/compatible/: AiModelBuilder.h  AiTensor.h  AippTensor.h  CMakeLists.txt  HiAiAippPara.h  HiAiModelBuilderType.h  HiAiModelManagerService.h  HiAiModelManagerType.h  MemBuffer.h  hiai_base_types_cpt.h
api/framework/graph/: CMakeLists.txt  attr_value.h  attributes_holder.h  buffer.h  graph.h  graph_api_export.h  model.h  op_reg.h  operator.h  operator_hiai_reg.h  shape.h  tensor.h  types.h
api/framework/graph/compatible/: all_ops.h  cpt_array_defs.h  cpt_const_defs.h  cpt_detection_defs.h  cpt_image_defs.h  cpt_math_defs.h  cpt_nn_defs.h  cpt_random_defs.h  operator_reg.h
api/framework/graph/debug/: ge_error_codes.h
api/framework/graph/detail/: attributes_holder.h
api/framework/graph/op/: all_ops.h  array_defs.h  array_defs.yaml  const_defs.h  const_defs.yaml  control_flow_defs.h  control_flow_defs.yaml  detection_defs.h  detection_defs.yaml  image_defs.h  image_defs.yaml  image_para_utils.h  math_defs.h  math_defs.yaml  nn_defs.h  nn_defs.yaml  random_defs.h  random_defs.yaml
api/framework/model/: CMakeLists.txt  built_model.h  built_model_aipp.h  built_model_ext.h  model_api_export.h
api/framework/model_builder/: CMakeLists.txt  hiai_ir_build.h  model_builder.h  model_builder_api_export.h  model_builder_types.h
api/framework/model_manager/: CMakeLists.txt  model_manager.h  model_manager_aipp.h  model_manager_api_export.h  model_manager_ext.h  model_manager_types.h  shared_mem_allocator.h
api/framework/tensor/: CMakeLists.txt  aipp_para.h  buffer.h  image_config_tensor_util.h  image_format.h  image_process_config_types.h  image_tensor_buffer.h  nd_tensor_buffer.h  nd_tensor_desc.h  tensor_api_export.h
api/framework/util/: CMakeLists.txt  base_types.h  native_handle_creator.h  util_api_export.h  version_util.h
api/infra/base/: CMakeLists.txt  error_types.h  identity.h  in_place.h  inline_variable.h  maybe.h  static_storage.h
inc/framework/c/: CMakeLists.txt  hiai_base_types.h  hiai_built_model.h  hiai_built_model_aipp.h  hiai_built_model_types.h  hiai_c_api_export.h  hiai_error_types.h  hiai_execute_option_types.h  hiai_model_builder.h  hiai_model_builder_types.h  hiai_model_manager.h  hiai_model_manager_aipp.h  hiai_model_manager_types.h  hiai_native_handle.h  hiai_nd_tensor_buffer.h  hiai_nd_tensor_desc.h  hiai_shared_buffer.h  hiai_tensor_aipp_para.h  hiai_version.h
inc/framework/c/compatible/: HIAIModelManager.h  HiAiModelManagerType.h  hiai_mem_buffer.h  hiai_model_buffer.h  hiai_model_manager_type.h  hiai_model_tensor_info.h  hiai_tensor_aipp_para.h  hiai_tensor_buffer.h  hiai_tensor_desc.h
inc/framework/common/: CMakeLists.txt  fmk_error_codes.h  fmk_types.h  hcs_types.h  op_types.h  register_op_types.h  types.h
inc/framework/compatible/: CMakeLists.txt  ir_transformer.h
inc/framework/graph/core/: CMakeLists.txt  def_types.h
inc/framework/graph/core/cgraph/: compute_graph.h  graph_builder.h  graph_bypasser.h  graph_finder.h  graph_fwd.h  graph_list_walker.h  graph_listener.h  graph_modifier.h  graph_notifier.h  graph_pruner.h  graph_serializer.h  graph_sorter.h  graph_spec.h  graph_topo_walker.h  legacy_graph.h
inc/framework/graph/core/edge/: anchor.h  anchor_fwd.h  edge.h  edge_fwd.h  edge_visitor.h  endpoint.h
inc/framework/graph/core/node/: legacy_node.h  node.h  node_compatibler.h  node_const_input.h  (+9 more)
inc/framework/infra/log/: CMakeLists.txt  log.h  log_fmk_interface.h
inc/framework/util/: CMakeLists.txt  base_buffer.h  bin_object.h  model_type_util.h  om_options.h  rom_version_util.h
inc/framework/util/tensor/: trans_tensor.h
inc/infra/base/: CMakeLists.txt  api_export.h  assertion.h  base_buffer.h  dynamic_load_helper.h  hiai_types.h  process_util.h  securestl.h
inc/infra/om/event_manager/: CMakeLists.txt  ai_om.h
src/framework/graph/graph_proto/: CMakeLists.txt
test/framework/: CMakeLists.txt
test/framework/stubs/: CMakeLists.txt
test/framework/stubs/hiai_ddk/: CMakeLists.txt  hiai.cmake  hiai_ir.cmake  hiai_ir_build.cmake  hiai_ir_build_aipp.cmake
test/framework/ut/: CMakeLists.txt
test/framework/ut/graph/: CMakeLists.txt
test/framework/ut/model_manager/: CMakeLists.txt
tests/: CMakeLists.txt
tests/stubs/: CMakeLists.txt
tests/stubs/ai_client/: CMakeLists.txt
tests/stubs/ai_client/src/: control_client.cpp  control_client.h  hiai_base_types.h  hiai_native_handle.h  hiai_nd_tensor_desc.h  stub_hiai_model_manager.cpp
tests/stubs/hiai_ddk/: CMakeLists.txt
tests/stubs/hiai_ddk/src/: stub_ai_om_shim.cpp  stub_hiai_foundation_dl_helper.c
tests/stubs/hiai_ir_build_aipp_ddk/: CMakeLists.txt
tests/stubs/hiai_ir_build_ddk/: CMakeLists.txt
tests/stubs/hiai_ir_build_ddk/src/: stub_hiai_ir_build.cpp
tests/stubs/hiai_ir_ddk/: CMakeLists.txt
tests/stubs/hiai_ir_ddk/src/: stub_model_serialize_wrapper.cpp.c
tests/ut/: CMakeLists.txt
tests/ut/graph/: CMakeLists.txt
tests/ut/graph/proto/: ge_ir.proto  om.proto
tests/ut/model_manager/ddk/: CMakeLists.txt  aipp_para_v2_ut.cpp  aipp_tensor_ut.cpp  aipp_tensor_v2_ut.cpp  base_buffer_ut.cpp  build_ir_model_ut.cpp  built_model_ut.cpp  check_model_compatibility_ut.cpp  create_aipppara_ut.cpp  create_aitensor_ut.cpp  create_imodelbuffer_ut.cpp  create_membuffer_ut.cpp  dynamic_load_helper_ut.cpp  file_util_ut.cpp  get_version_ut.cpp  image_buffer_ut.cpp  image_tensor_buffer_ut.cpp  local_buffer_ut.cpp  main.cpp  nd_tensor_buffer_ut.cpp  process_dynamic_aipp_ut.cpp  process_ut.cpp  set_model_priority_ut.cpp
tests/ut/model_manager/direct_model_runtime/: CMakeLists.txt  direct_built_model_aipp_ut.cpp  direct_built_model_ut.cpp  direct_model_builder_ut.cpp  direct_model_manager_aipp_ut.cpp  direct_model_manager_ut.cpp  hiai_model_compatible_ut.cpp  main.cpp  module.mk
tests/ut/model_manager/model_manager_v2/: CMakeLists.txt  main.cpp  module.mk
(+510 files in other folders)
